[gd_scene load_steps=26 format=3 uid="uid://d3uxw8sf6s8eg"]

[ext_resource type="Script" path="res://scripts/aliments.gd" id="1_slfee"]
[ext_resource type="Texture2D" uid="uid://rat2snchrj3d" path="res://assets/Aliment.png" id="2_jait0"]
[ext_resource type="AudioStream" uid="uid://v4dn17mosu6t" path="res://assets/Sound/SoundEffect-Miam.mp3" id="3_khov4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nryxe"]
atlas = ExtResource("2_jait0")
region = Rect2(54, 0, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rope"]
atlas = ExtResource("2_jait0")
region = Rect2(108, 0, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_606r4"]
atlas = ExtResource("2_jait0")
region = Rect2(162, 0, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxcj6"]
atlas = ExtResource("2_jait0")
region = Rect2(270, 0, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3eon"]
atlas = ExtResource("2_jait0")
region = Rect2(378, 0, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_brigw"]
atlas = ExtResource("2_jait0")
region = Rect2(378, 54, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_8txcb"]
atlas = ExtResource("2_jait0")
region = Rect2(270, 54, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1shd"]
atlas = ExtResource("2_jait0")
region = Rect2(162, 54, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1cky"]
atlas = ExtResource("2_jait0")
region = Rect2(0, 54, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhroh"]
atlas = ExtResource("2_jait0")
region = Rect2(54, 108, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgo37"]
atlas = ExtResource("2_jait0")
region = Rect2(162, 108, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_c36ah"]
atlas = ExtResource("2_jait0")
region = Rect2(378, 108, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf4ac"]
atlas = ExtResource("2_jait0")
region = Rect2(378, 162, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtcu6"]
atlas = ExtResource("2_jait0")
region = Rect2(108, 162, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_067bm"]
atlas = ExtResource("2_jait0")
region = Rect2(54, 162, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_l38ea"]
atlas = ExtResource("2_jait0")
region = Rect2(0, 162, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_w350p"]
atlas = ExtResource("2_jait0")
region = Rect2(0, 216, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v5gl"]
atlas = ExtResource("2_jait0")
region = Rect2(54, 216, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5quu"]
atlas = ExtResource("2_jait0")
region = Rect2(108, 216, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2akv"]
atlas = ExtResource("2_jait0")
region = Rect2(378, 216, 54, 54)

[sub_resource type="SpriteFrames" id="SpriteFrames_tg4ix"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nryxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rope")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606r4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxcj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3eon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brigw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8txcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1shd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1cky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhroh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgo37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c36ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf4ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtcu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_067bm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l38ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w350p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v5gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5quu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2akv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0udnx"]
size = Vector2(63.5, 53.25)

[node name="aliments" type="Area2D" groups=["aliments"]]
script = ExtResource("1_slfee")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.00001, 0.999992)
scale = Vector2(6.15972, 6.15972)
sprite_frames = SubResource("SpriteFrames_tg4ix")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_0udnx")

[node name="SoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_khov4")
volume_db = 5.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
